# Technika-Baker

./: CMakeLists.txt  README.md  baker-outer-planar.cpp  baker-outer-planar.hpp  example.cpp  problems.hpp  test.cpp  teter.cpp
Baker's Technique/: bakers_technique.hpp
Boost_tests/: CMakeLists.txt  k-outer_test.cpp  test1.cpp  test2.cpp
Boost_tests/results/: k-outer_baker_performance  k-outer_bodlaender_performance  n_baker_performance  n_bodlaender_performance  ptas_baker_performance  ptas_bodlaender_performance
Boost_tests/test_graphs/: 6vertices  7vertices  8vertices
bodlaender/: bodlaender_impl.hpp
boost_tests/: CMakeLists.txt  k-outer_test.cpp
boost_tests/results/: k-outer_baker_performance  k-outer_bodlaender_performance  k-outer_ds_baker_performance  n_baker_performance  n_bodlaender_performance  n_ds_baker_performance  n_ds_ecc_performance  n_ds_lcc_performance  ptas_baker_performance  ptas_bodlaender_performance  ptas_vc_baker_results
boost_tests/test_graphs/: 4vertices  5vertices
k-outerplanar/: baker-k-outer-planar.hpp  problems2.hpp  test2.hpp
outerplanar/: baker-outer-planar.hpp  problems.hpp  test.hpp
plot/: plot.py  plot2.py
thesis_source/: bib.bib  rozprawa.tex
thesis_source/definicje/: faces.tikz
thesis_source/rysunki_baker/: drzewa_z_bounady.tikz  k-zewnetrznie.tikz  k-zewnetrznie_drzewa.tikz  kawalki.tikz  (+12 more)
tree_decomposition/: bodlaender.hpp  bodlaender_impl.hpp  create_tree_decomposition.hpp  tree_decomposition.hpp
utils/: cyclic_vector.h  cyclic_vector.hpp  find_outer_face.hpp  level_face_traversal.h  level_face_traversal.hpp  name_levels.hpp  random_graph.hpp  tree_constructor.hpp  visitors.hpp
(+19 files in other folders)
